--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development node index.js",
+    "migration": "NODE_ENV=development node_modules/.bin/sequelize db:migrate",
     "start-test": "NODE_ENV=test node index.js",
     "test": "jasmine-node spec"
   },
@@ -23,5 +24,10 @@
     "request": "^2.67.0",
     "sequelize": "^3.16.0",
     "sequelize-cli": "^2.3.1"
+  },
+  "devDependencies": {
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
