--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=development node index.js",
     "migration": "NODE_ENV=development node_modules/.bin/sequelize db:migrate",
+    "migration_test":"NODE_ENV=test node_modules/.bin/sequelize db:migrate",
     "start-test": "NODE_ENV=test node index.js",
     "test": "jasmine-node spec"
   },
