--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "mysquar-nodejs-test",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": ">= 7.6.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development node index.js",
     "migration": "NODE_ENV=development node_modules/.bin/sequelize db:migrate",
-    "migration_test":"NODE_ENV=test node_modules/.bin/sequelize db:migrate",
-    "start-test": "NODE_ENV=test nodemon index.js",
+    "migration_test": "NODE_ENV=test node_modules/.bin/sequelize db:migrate",
+    "start-test": "NODE_ENV=test node index.js",
     "test": "jasmine-node spec"
   },
   "author": "",
